@@ -53,6 +53,7 @@
 	- python: return [], not None, accessing header tags (#112794).
 	- python: avoid invoking python to acquire ill-specified parameters.
 	- add ia32e arch.
+	- fix: sq->reaped needs sighold(SIGCHLD)/sigrelease(SIGCHLD) (#117620).
 
 4.2 -> 4.2.1:
 	- fix: nested %if handling, optind initialization posix vs. glibc.
